[gd_scene load_steps=13 format=4 uid="uid://dovp2y4ly6yrw"]

[ext_resource type="Script" uid="uid://8vfncm6iybho" path="res://scripts/level_2.gd" id="1_at1ld"]
[ext_resource type="Script" uid="uid://cwpqxg0mgikx1" path="res://scripts/game_manager.gd" id="2_vm7no"]
[ext_resource type="Texture2D" uid="uid://b1crxyhou8hpp" path="res://assets/sprites/patch-tileset.png" id="3_hbb88"]
[ext_resource type="Texture2D" uid="uid://cvmdi5akpghux" path="res://assets/sprites/world_tileset.png" id="4_wcjpl"]
[ext_resource type="PackedScene" uid="uid://dpfp2gvrhdnd2" path="res://scenes/player.tscn" id="5_5orea"]
[ext_resource type="FontFile" uid="uid://do04mthks44vx" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="7_w200a"]
[ext_resource type="PackedScene" uid="uid://bpccl1tt3p3ht" path="res://scenes/patch.tscn" id="8_uo0vl"]
[ext_resource type="PackedScene" uid="uid://cxca8wyds6jsp" path="res://scenes/death_zone.tscn" id="9_k2aru"]
[ext_resource type="PackedScene" uid="uid://k7rf7v6y40xi" path="res://scenes/sound_effects.tscn" id="10_ndgrd"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bt44k"]
texture = ExtResource("3_hbb88")
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jirdo"]
texture = ExtResource("4_wcjpl")
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
2:4/size_in_atlas = Vector2i(3, 3)
2:4/0 = 0
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_bt44k"]
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_jirdo")
sources/0 = SubResource("TileSetAtlasSource_bt44k")

[node name="Level_2" type="Node2D"]
script = ExtResource("1_at1ld")

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_vm7no")

[node name="CorruptionTimer" type="Timer" parent="GameManager"]
wait_time = 60.0
one_shot = true

[node name="RestartTimer" type="Timer" parent="GameManager"]
wait_time = 0.5
one_shot = true

[node name="Terrain" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD6/wAAAAACAAEAAAD7/wAAAAACAAEAAAD8/wAAAAACAAEAAAD9/wAAAAACAAEAAAD+/wAAAAACAAEAAAD//wAAAAACAAEAAAAAAAAAAAACAAEAAAABAAAAAAACAAEAAAACAAAAAAACAAEAAAADAAAAAAACAAEAAAAEAAAAAAACAAEAAAAFAAAAAAACAAEAAAAGAAAAAAACAAEAAAAHAAAAAAACAAEAAAAIAAAAAAACAAEAAAAJAAAAAAACAAEAAAD4//7/AAACAAIAAAD4////AAACAAIAAADs/wAAAAACAAEAAADt/wAAAAACAAEAAADu/wAAAAACAAEAAADv/wAAAAACAAEAAADw/wAAAAACAAEAAADx/wAAAAACAAEAAADy/wAAAAACAAEAAADz/wAAAAACAAEAAAD0/wAAAAACAAEAAAD1/wAAAAACAAEAAAD2/wAAAAACAAEAAAD3/wAAAAACAAEAAAD4/wAAAAACAAEAAAD5/wAAAAACAAEAAADr/wAAAAABAAEAAADr//7/AAACAAIAAADr////AAACAAIAAADs//7/AAACAAIAAADs////AAACAAIAAADt//7/AAACAAIAAADt////AAACAAIAAADu//7/AAACAAIAAADu////AAACAAIAAADv//7/AAACAAIAAADv////AAACAAIAAADw//7/AAACAAIAAADw////AAACAAIAAADx//7/AAACAAIAAADx////AAACAAIAAADy//7/AAACAAIAAADy////AAACAAIAAADz//7/AAACAAIAAADz////AAACAAIAAAD0//7/AAACAAIAAAD0////AAACAAIAAAD1//7/AAACAAIAAAD1////AAACAAIAAAD2//7/AAACAAIAAAD2////AAACAAIAAAD3//7/AAACAAIAAAD3////AAACAAIAAADr//3/AAACAAMAAADs//3/AAACAAMAAADt//3/AAACAAMAAADu//3/AAACAAMAAADv//3/AAACAAMAAADw//3/AAACAAMAAADx//3/AAACAAMAAADy//3/AAACAAMAAADz//3/AAACAAMAAAD0//3/AAACAAMAAAD1//3/AAACAAMAAAD2//3/AAACAAMAAAD3//3/AAACAAMAAAD4//3/AAACAAMAAAD5//3/AAACAAMAAAD6//3/AAACAAMAAAD7//3/AAACAAMAAAD8//3/AAACAAMAAAD9//3/AAACAAMAAAD+//3/AAACAAMAAAD///3/AAACAAMAAAAAAP3/AAACAAMAAAABAP3/AAACAAMAAAACAP3/AAACAAMAAAADAP3/AAACAAMAAAAEAP3/AAACAAMAAAAFAP3/AAACAAMAAAAGAP3/AAACAAMAAAAHAP3/AAACAAMAAAAIAP3/AAACAAMAAAAJAP3/AAACAAMAAADr//r/AAACAAEAAADr//v/AAACAAIAAADr//z/AAACAAIAAADs//r/AAACAAEAAADs//v/AAACAAIAAADs//z/AAACAAIAAADt//r/AAACAAEAAADt//v/AAACAAIAAADt//z/AAACAAIAAADu//r/AAACAAEAAADu//v/AAACAAIAAADu//z/AAACAAIAAADv//r/AAACAAEAAADv//v/AAACAAIAAADv//z/AAACAAIAAADw//r/AAAIAAIAAADw//v/AAACAAIAAADw//z/AAACAAIAAADx//n/AAAIAAIAAADx//r/AAACAAIAAADx//v/AAACAAIAAADx//z/AAACAAIAAADy//n/AAACAAIAAADy//r/AAACAAIAAADy//v/AAACAAIAAADy//z/AAACAAIAAADz//n/AAACAAIAAADz//r/AAACAAIAAADz//v/AAACAAIAAADz//z/AAACAAIAAAD0//n/AAACAAIAAAD0//r/AAACAAIAAAD0//v/AAACAAIAAAD0//z/AAACAAIAAAD1//n/AAACAAIAAAD1//r/AAACAAIAAAD1//v/AAACAAIAAAD1//z/AAACAAIAAAD2//n/AAACAAIAAAD2//r/AAACAAIAAAD2//v/AAACAAIAAAD2//z/AAACAAIAAAD3//n/AAACAAIAAAD3//r/AAACAAIAAAD3//v/AAACAAIAAAD3//z/AAACAAIAAAD4//n/AAACAAIAAAD4//r/AAACAAIAAAD4//v/AAACAAIAAAD4//z/AAACAAIAAAD5//n/AAACAAIAAAD5//r/AAACAAIAAAD5//v/AAACAAIAAAD5//z/AAACAAIAAAD6//n/AAACAAIAAAD6//r/AAACAAIAAAD6//v/AAACAAIAAAD6//z/AAACAAIAAAD7//n/AAACAAIAAAD7//r/AAACAAIAAAD7//v/AAACAAIAAAD7//z/AAACAAIAAAD8//n/AAACAAIAAAD8//r/AAACAAIAAAD8//v/AAACAAIAAAD8//z/AAACAAIAAAD9//n/AAACAAIAAAD9//r/AAACAAIAAAD9//v/AAACAAIAAAD9//z/AAACAAIAAAD+//n/AAACAAIAAAD+//r/AAACAAIAAAD+//v/AAACAAIAAAD+//z/AAACAAIAAAD///n/AAACAAIAAAD///r/AAACAAIAAAD///v/AAACAAIAAAD///z/AAACAAIAAAAAAPn/AAACAAIAAAAAAPr/AAACAAIAAAAAAPv/AAACAAIAAAAAAPz/AAACAAIAAAABAPn/AAACAAIAAAABAPr/AAACAAIAAAABAPv/AAACAAIAAAABAPz/AAACAAIAAAACAPn/AAACAAIAAAACAPr/AAACAAIAAAACAPv/AAACAAIAAAACAPz/AAACAAIAAAADAPn/AAACAAIAAAADAPr/AAACAAIAAAADAPv/AAACAAIAAAADAPz/AAACAAIAAAAEAPn/AAACAAIAAAAEAPr/AAACAAIAAAAEAPv/AAACAAIAAAAEAPz/AAACAAIAAAAFAPn/AAACAAIAAAAFAPr/AAACAAIAAAAFAPv/AAACAAIAAAAFAPz/AAACAAIAAAAGAPn/AAACAAIAAAAGAPr/AAACAAIAAAAGAPv/AAACAAIAAAAGAPz/AAACAAIAAAAHAPn/AAACAAIAAAAHAPr/AAACAAIAAAAHAPv/AAACAAIAAAAHAPz/AAACAAIAAAAIAPn/AAACAAIAAAAIAPr/AAACAAIAAAAIAPv/AAACAAIAAAAIAPz/AAACAAIAAAAJAPn/AAACAAIAAAAJAPr/AAACAAIAAAAJAPv/AAACAAIAAAAJAPz/AAACAAIAAADy//j/AAACAAIAAADz//j/AAACAAIAAAD0//j/AAACAAIAAAD1//j/AAACAAIAAAD2//j/AAACAAIAAAD3//j/AAACAAIAAAD4//j/AAACAAIAAAD5//j/AAACAAIAAAD6//j/AAACAAIAAAD7//j/AAACAAIAAAD8//j/AAACAAIAAAD9//j/AAACAAIAAAD+//j/AAACAAIAAAD///j/AAACAAIAAAAAAPj/AAACAAIAAAABAPj/AAACAAIAAAACAPj/AAACAAIAAAADAPj/AAACAAIAAAAEAPj/AAACAAIAAAAFAPj/AAACAAIAAAAGAPj/AAACAAIAAAAHAPj/AAACAAIAAAAIAPj/AAACAAIAAAAJAPj/AAACAAIAAADx//f/AAABAAEAAADy//f/AAACAAEAAADz//f/AAACAAEAAAD0//f/AAACAAEAAAD1//f/AAACAAEAAAD2//f/AAACAAEAAAD3//f/AAACAAEAAAD4//f/AAACAAEAAAD5//f/AAACAAEAAAD6//f/AAACAAEAAAD7//f/AAACAAEAAAD8//f/AAACAAEAAAD9//f/AAACAAEAAAD+//f/AAACAAEAAAD///f/AAACAAEAAAAAAPf/AAACAAEAAAABAPf/AAACAAEAAAACAPf/AAACAAEAAAADAPf/AAACAAEAAAAEAPf/AAACAAEAAAAFAPf/AAACAAEAAAAGAPf/AAACAAEAAAAHAPf/AAACAAEAAAAIAPf/AAACAAEAAAAJAPf/AAACAAEAAADx//j/AAABAAIAAADw//n/AAABAAEAAADw/wEAAAACAAMAAADx/wEAAAACAAMAAADy/wEAAAACAAMAAADz/wEAAAACAAMAAAD0/wEAAAACAAMAAAD1/wEAAAACAAMAAAD2/wEAAAACAAMAAAD3/wEAAAACAAMAAAD4/wEAAAACAAMAAAD5/wEAAAACAAMAAAD6/wEAAAACAAMAAAD7/wEAAAACAAMAAAD8/wEAAAACAAMAAAD9/wEAAAACAAMAAAD+/wEAAAACAAMAAADr/wEAAAABAAMAAADs/wEAAAACAAMAAADt/wEAAAACAAMAAADu/wEAAAACAAMAAADv/wEAAAACAAMAAAD1/wIAAAABAAMAAAD2/wIAAAAIAAEAAAD3/wIAAAAHAAEAAAD4/wIAAAADAAMAAAD2/wMAAAABAAIAAAD2/wQAAAABAAIAAAD2/wUAAAABAAIAAAD2/wYAAAABAAIAAAD2/wcAAAABAAIAAAD2/wgAAAABAAIAAAD2/wkAAAABAAIAAAD2/woAAAABAAIAAAD3/wMAAAADAAIAAAD3/wQAAAADAAIAAAD3/wUAAAADAAIAAAD3/wYAAAADAAIAAAD3/wcAAAADAAIAAAD3/wgAAAADAAIAAAD3/wkAAAADAAIAAAD3/woAAAADAAIAAAAAAAEAAAAIAAEAAAD//wEAAAACAAMAAAAAAAIAAAABAAIAAAAAAAMAAAABAAMAAAABAAMAAAACAAMAAAACAAMAAAAIAAEAAAACAAQAAAABAAIAAAACAAUAAAABAAIAAAACAAYAAAABAAIAAAACAAcAAAABAAIAAAACAAgAAAABAAIAAAACAAkAAAABAAIAAAACAAoAAAABAAIAAAABAAEAAAACAAIAAAABAAIAAAACAAIAAAACAAEAAAACAAIAAAACAAIAAAACAAIAAAADAAEAAAACAAIAAAADAAIAAAACAAIAAAAEAAEAAAACAAIAAAAEAAIAAAACAAIAAAAFAAEAAAACAAIAAAAFAAIAAAACAAIAAAAGAAEAAAACAAIAAAAGAAIAAAACAAIAAAAHAAEAAAACAAIAAAAHAAIAAAACAAIAAAAIAAEAAAACAAIAAAAIAAIAAAACAAIAAAAJAAEAAAACAAIAAAAJAAIAAAACAAIAAAADAAMAAAACAAIAAAADAAQAAAACAAIAAAADAAUAAAACAAIAAAADAAYAAAACAAIAAAADAAcAAAACAAIAAAADAAgAAAACAAIAAAADAAkAAAACAAIAAAADAAoAAAACAAIAAAAEAAMAAAACAAIAAAAEAAQAAAACAAIAAAAEAAUAAAACAAIAAAAEAAYAAAACAAIAAAAEAAcAAAACAAIAAAAEAAgAAAACAAIAAAAEAAkAAAACAAIAAAAEAAoAAAACAAIAAAAFAAMAAAACAAIAAAAFAAQAAAACAAIAAAAFAAUAAAACAAIAAAAFAAYAAAACAAIAAAAFAAcAAAACAAIAAAAFAAgAAAACAAIAAAAFAAkAAAACAAIAAAAFAAoAAAACAAIAAAAGAAMAAAACAAIAAAAGAAQAAAACAAIAAAAGAAUAAAACAAIAAAAGAAYAAAACAAIAAAAGAAcAAAACAAIAAAAGAAgAAAACAAIAAAAGAAkAAAACAAIAAAAGAAoAAAACAAIAAAAHAAMAAAACAAIAAAAHAAQAAAACAAIAAAAHAAUAAAACAAIAAAAHAAYAAAACAAIAAAAHAAcAAAACAAIAAAAHAAgAAAACAAIAAAAHAAkAAAACAAIAAAAHAAoAAAACAAIAAAAIAAMAAAACAAIAAAAIAAQAAAACAAIAAAAIAAUAAAACAAIAAAAIAAYAAAACAAIAAAAIAAcAAAACAAIAAAAIAAgAAAACAAIAAAAIAAkAAAACAAIAAAAIAAoAAAACAAIAAAAJAAMAAAACAAIAAAAJAAQAAAACAAIAAAAJAAUAAAACAAIAAAAJAAYAAAACAAIAAAAJAAcAAAACAAIAAAAJAAgAAAACAAIAAAAJAAkAAAACAAIAAAAJAAoAAAACAAIAAAA=")
tile_set = SubResource("TileSet_bt44k")

[node name="Player" parent="." instance=ExtResource("5_5orea")]
unique_name_in_owner = true
position = Vector2(-103, -4)

[node name="MainCamera" type="Camera2D" parent="Player"]
zoom = Vector2(2.5, 2.5)
position_smoothing_enabled = true

[node name="StopPoints" type="Node" parent="."]

[node name="GlitchTiles" type="Node" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_top = 15.0
offset_right = 48.0
offset_bottom = 63.0
grow_horizontal = 2

[node name="CorruptionLabel" type="Label" parent="UI/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("7_w200a")
theme_override_font_sizes/font_size = 32
text = "60"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartGame" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true
autostart = true

[node name="Patch" parent="." instance=ExtResource("8_uo0vl")]
position = Vector2(235, -438)

[node name="DeathZone" type="Node" parent="."]

[node name="Bottom" parent="DeathZone" instance=ExtResource("9_k2aru")]
position = Vector2(0, 212)

[node name="Top" parent="DeathZone" instance=ExtResource("9_k2aru")]
position = Vector2(0, -640)
rotation = -3.14159

[node name="SoundEffects" parent="." instance=ExtResource("10_ndgrd")]
unique_name_in_owner = true

[connection signal="timeout" from="GameManager/CorruptionTimer" to="GameManager" method="_on_corruption_timer_timeout"]
[connection signal="timeout" from="GameManager/RestartTimer" to="GameManager" method="_on_restart_timer_timeout"]
[connection signal="timeout" from="StartGame" to="." method="_on_start_game_timeout"]
